--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.11.1",
     "web-vitals": "^2.1.4"
   },
