--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
@@ -16,6 +18,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.11.1",
     "web-vitals": "^2.1.4"
@@ -43,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:8080"
 }
