--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,8 +17,10 @@
     "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.12.0",
