입찰유효성검사 완료/낙찰, 낙찰내역 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ jwt:
 
 logging:
   level:
+    com.newdeal.suhwagdam.service.SuccessBidService: DEBUG
     com.newdeal.suhwagdam: DEBUG
     org.springframework.web.servlet: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
