--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,8 +52,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://sunkyoung.store:3306/suhwagdam
     url: jdbc:mysql://localhost:3306/suhwagdam
-    username: root
-    password: 1234
+    username: newdeal
+    password: s1201newdeal
   jpa:
     hibernate:
       ddl-auto: update
