--- a/front-end/package.json
+++ b/front-end/package.json
@@ -50,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:8080"
+  "proxy": "http://127.0.0.1:8080",
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+  }
 }
